2016-06-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/xfer-dest-taper-splitter.c: Do not cancel twice
	* perl/Amanda/Taper/Worker.pm: Abort_setup on input_errors
	* server-src/dumper.c: Improve debugging

2016-06-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/ammessage.c (set_message): Fix typo in mesage 2800036

2016-06-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/shm-ring.c (cleanup_shm_ring): New function to remove
	  unused semaphore and shared memory
	* common-src/shm-ring.h (cleanup_shm_ring): Add prototype
	* server-src/driver.c: Call cleanup_shm_ring

2016-06-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (handle_chunker_result): Set job on BOGUS

2016-06-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amadmin.c: Fix out of bound

2016-06-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amstatus.pl: Use 'dsize' if available

2016-06-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/mem-ring.c, common-src/shm-ring.c: Make sure the ring
	  size is at least twice the block size, otherwise the ring can hang

2016-06-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/security-util.c, common-src/shm-ring.c,
	  device-src/xfer-dest-taper-splitter.c,
	  server-src/xfer-source-holding.c: Allow to completely fill the ring

2016-05-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/shm-ring.c (shm_ring_to_security_stream),
	  device-src/xfer-dest-taper-splitter.c (device_thread_wait_for_block),
	  server-src/dumper.c (handle_shm_ring_to_fd_thread): set usable after
	  getting the semaphore
	* server-src/driver.c (handle_chunker_result): Fix for BOGUS.

2016-05-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: displayunit default ot 'K' (uppercase)
	* installcheck/Amanda_Rest_Configs.pl: Fix for K uppercase
	* installcheck/Amanda_Rest_Runs.pl: Fix for K uppercase